--- a/css/details/details.less
+++ b/css/details/details.less
@@ -86,7 +86,8 @@ img{
               text-indent: 30px;
               border: 1px solid #DEDEDE;
               &:focus{
-                border: 1px solid @mainColor;
+                //border: 1px solid @mainColor;
+                outline: none;
               }
             }
 
@@ -150,6 +151,7 @@ img{
               height: 355px;
               z-index: 5;
               opacity: 1;
+              padding: 29px;
             }
             .smallList {
               //display: block;
@@ -164,7 +166,7 @@ img{
             top: 39px;
             width: @mainWidth;
             height: 0;
-            padding: 29px;
+            //padding: 29px;
             box-sizing: border-box;
             border: 1px solid @mainColor;
             background-color: white;
