--- a/css/list/list.css
+++ b/css/list/list.css
@@ -18,6 +18,9 @@ li {
 img {
   display: block;
 }
+a {
+  display: inline-block;
+}
 #wrap {
   /*头部*/
   /*导航*/
@@ -246,7 +249,7 @@ img {
 }
 #wrap .content_warp .nav .seek_item .seek_list {
   float: left;
-  width: 10%;
+  width: 81.66666667px;
   text-align: center;
 }
 #wrap .content_warp .nav .seek_item .seek_list a {
@@ -255,7 +258,9 @@ img {
 }
 #wrap .content_warp .nav .seek_item .seek_list a:hover {
   color: red;
-  border-color: #000000;
+}
+#wrap .content_warp .nav .seek_item .seek_list.activ {
+  background-color: #e0d03d;
 }
 #wrap .content_warp .nav .price {
   width: 30%;
@@ -308,7 +313,11 @@ img {
   width: 100%;
   height: 198px;
 }
-#wrap .content_warp .goods .goods_item .goods_list .imgLink img {
+#wrap .content_warp .goods .goods_item .goods_list .imgLink a {
+  width: 100%;
+  height: 100%;
+}
+#wrap .content_warp .goods .goods_item .goods_list .imgLink a img {
   width: 100%;
   height: 100%;
 }
@@ -350,6 +359,7 @@ img {
   text-align: center;
 }
 #wrap .content_warp .paging .paging_num #jump {
+  text-align: center;
   width: 40px;
 }
 #wrap .content_warp .paging .paging_num a {
