--- a/css/list/list.less
+++ b/css/list/list.less
@@ -17,8 +17,12 @@ ul,li{
 img{
   display: block;
 }
+a{
+  display: inline-block;
+}
 @mainColor:#E0D03D;
 @mainWidth:1226px;
+@seek_itemWidth:735px;
   #wrap{
     /*头部*/
     .headerWrap{
@@ -256,15 +260,17 @@ img{
           width: 60%;
           .seek_list{
             float: left;
-            width:10%;
+            width:@seek_itemWidth/9;
             text-align: center;
              a{
               width: 100%;
               color: #333333;
               &:hover{
                 color: red;
-                border-color: #000000;
               }
+            }
+            &.activ{
+              background-color:@mainColor ;
             }
           }
         }
@@ -317,9 +323,13 @@ img{
             .imgLink{
               width: 100%;
               height: 198px;
-              img{
+              a{
                 width: 100%;
                 height: 100%;
+                img{
+                  width: 100%;
+                  height: 100%;
+                }
               }
             }
             .info{
@@ -364,6 +374,7 @@ img{
          text-align: center;
          .paging_num{
               #jump{
+                text-align: center;
                 width: 40px;
               }
               a{
@@ -378,6 +389,7 @@ img{
               .bottom{
                 margin-right:15px ;
               }
+
 
          }
       }
